<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/negro"
    tools:context=".InstruccionesActivity">

    <ImageView
        android:id="@+id/falconPersonajeAvengers"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/inns"/>

    <TextView
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo"
        android:textSize="24dp"
        android:textColor="@color/blanco"
        android:background="@color/background"
        android:text="@string/txt1_instrucciones"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="110dp"
        android:textColor="@color/blanco"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:src="@drawable/logo"
        android:textSize="22dp"
        android:background="@color/background"
        android:text="@string/txt2_instrucciones"/>
    <TextView
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:textColor="@color/blanco"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:src="@drawable/logo"
        android:textSize="20dp"
        android:background="@color/background"
        android:text="@string/txt3_instrucciones"/>
    <TextView
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:textColor="@color/blanco"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:src="@drawable/logo"
        android:textSize="26dp"
        android:background="@color/background"
        android:text="@string/txt4_instrucciones"/>
    <Button
        android:id="@+id/btn_saltar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:textSize="20sp"
        android:text="@string/saltar"
        android:background="@color/boton_avng"
        android:textColor="@color/blanco"/>
</RelativeLayout>